...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Event Name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextEventName"
            android:hint="Enter event name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Price"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="Price (in $) or Free" />

        <TextView
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Location"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Address"
            android:inputType="textMultiLine"
            android:minLines="1" />
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Date"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Enter Date"
            android:inputType="textMultiLine"
            android:minLines="1" />
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Time"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Enter Time"
            android:inputType="textMultiLine"
            android:minLines="1" />
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Description"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:minLines="3" />
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Capacity"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Capacity"
            android:inputType="number"
            android:minLines="1" />
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Category"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp" />

        <!-- Registration opens -->
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Registration Opens"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editRegOpenDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pick open date" />

        <EditText
            android:id="@+id/editRegOpenTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pick open time" />

        <!-- Registration closes -->
        <TextView
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="*Registration Closes"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editRegCloseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pick close date" />

        <EditText
            android:id="@+id/editRegCloseTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pick close time" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Waiting List Limit"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editWaitingListLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Limit (optional)"
            android:inputType="number"
            android:minLines="1" />
...
            android:id="@+id/geoLocationBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Enable Geo-Location Option" />

        <Button
            android:id="@+id/uploadImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Image" />

        <TextView
            android:id="@+id/selectedPhotoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No Image Selected" />

        <Button
            android:id="@+id/buttonSubmit"
            android:text="Submit"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
...
