...
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="Draw"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/active_events_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="My Events"
            android:textColor="@color/black" />
...
            android:backgroundTint="@color/white"
            android:text="Confirmed"
            android:textColor="@color/black" />
    </LinearLayout>

    <ListView
        android:id="@+id/organizer_events"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
...
